feat: identify anonymous users by Firebase installation
